[skip] Fixed alignment of search tips and allowed scrolling them (6m)

--- a/app/assets/stylesheets/houston/feedback/feedback.scss
+++ b/app/assets/stylesheets/houston/feedback/feedback.scss
@@ -553,6 +553,8 @@ html.tester-bar .feedback-window {
 #search_instructions {
   height: 100%;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 
   h3 {
     line-height: inherit;
@@ -564,13 +566,14 @@ html.tester-bar .feedback-window {
     padding: 0.33em 0 0 0;
     box-sizing: border-box;
     color: #888;
+    flex-shrink: 0;
   }
 }
 
 .feedback-search-examples {
-  padding: 0 10px;
-  margin: 0 0 1em;
-  overflow: hidden;
+  margin: 0 -20px 0 0;
+  padding: 0 30px 30px 10px;
+  overflow-y: auto;
   font-size: 13px;
 
   dt {
@@ -581,7 +584,10 @@ html.tester-bar .feedback-window {
     font-weight: 500;
     font-size: 0.92em;
 
-    a { display: block; }
+    a {
+      display: block;
+      white-space: nowrap;
+    }
   }
 
   dd {
